Compiler/GrammarParser.py
# Generated from C:/Users/48735/Desktop/Kompilki/Emojii-Programming/Grammars/Grammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'='", "'%'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','", "':'", "';'", "'\"'", "'or'", "'and'", "<INVALID>", 
                     "'print'", "'not'", "'if'", "'else'", "'elif'", "'for'", 
                     "'in'", "'range'", "'enumerate'", "'while'", "'switch'", 
                     "'case'", "'break'", "'continue'", "'return'", "'def'", 
                     "'true'", "'false'", "'try'", "'EXCEPT'", "'finally'", 
                     "'raise'", "'const'", "'import'", "'from'", "'lambda'", 
                     "'none'", "'~'", "'decl'", "<INVALID>", "'->'", "'as'" ]

    symbolicNames = [ "<INVALID>", "WS", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
                      "EQUAL", "MOD", "LPAR", "RPAR", "LBRACE", "RBRACE", 
                      "LSQB", "RSQB", "COMMA", "COLON", "SEMI", "QUOTE", 
                      "OR", "AND", "COMMENT", "PRINT", "NOT", "IF", "ELSE", 
                      "ELIF", "FOR", "IN", "RANGE", "ENUMERATE", "WHILE", 
                      "SWITCH", "CASE", "BREAK", "CONTINUE", "RETURN", "DEF", 
                      "TRUE", "FALSE", "TRY", "EXCEPT", "FINALLY", "RAISE", 
                      "CONST", "IMPORT", "FROM", "LAMBDA", "NONE", "ECOMPLEMENT", 
                      "DECL", "TYPE", "ARROW", "AS", "BOOLEAN", "IDENTIFIER", 
                      "NUMBER", "STRING", "CONDITION_OP" ]

    RULE_start = 0
    RULE_stmt = 1
    RULE_simple_stmt = 2
    RULE_assignment_stmt = 3
    RULE_declare_stmt = 4
    RULE_single_declaration = 5
    RULE_import_stmt = 6
    RULE_from_stmt = 7
    RULE_module_name = 8
    RULE_import_list = 9
    RULE_import_name = 10
    RULE_try_stmt = 11
    RULE_except_clause = 12
    RULE_print_stmt = 13
    RULE_multiple_assignment_stmt = 14
    RULE_raise_stmt = 15
    RULE_exception_expr = 16
    RULE_exception_name = 17
    RULE_compound_stmt = 18
    RULE_if_stmt = 19
    RULE_elif_stmt = 20
    RULE_else_stmt = 21
    RULE_while_stmt = 22
    RULE_for_stmt = 23
    RULE_function_def = 24
    RULE_parameters = 25
    RULE_typed_par = 26
    RULE_function_call = 27
    RULE_loop_stmt = 28
    RULE_func_body = 29
    RULE_flow_stmt = 30
    RULE_return_stmt = 31
    RULE_explist = 32
    RULE_exp = 33
    RULE_arithmeticOperation = 34
    RULE_term = 35
    RULE_factor = 36
    RULE_printOperation = 37
    RULE_conditionalOperation = 38
    RULE_logicalTerm = 39
    RULE_logicalFactor = 40
    RULE_logicalPrimary = 41
    RULE_value = 42

    ruleNames =  [ "start", "stmt", "simple_stmt", "assignment_stmt", "declare_stmt", 
                   "single_declaration", "import_stmt", "from_stmt", "module_name", 
                   "import_list", "import_name", "try_stmt", "except_clause", 
                   "print_stmt", "multiple_assignment_stmt", "raise_stmt", 
                   "exception_expr", "exception_name", "compound_stmt", 
                   "if_stmt", "elif_stmt", "else_stmt", "while_stmt", "for_stmt", 
                   "function_def", "parameters", "typed_par", "function_call", 
                   "loop_stmt", "func_body", "flow_stmt", "return_stmt", 
                   "explist", "exp", "arithmeticOperation", "term", "factor", 
                   "printOperation", "conditionalOperation", "logicalTerm", 
                   "logicalFactor", "logicalPrimary", "value" ]

    EOF = Token.EOF
    WS=1
    PLUS=2
    MINUS=3
    MULTIPLY=4
    DIVIDE=5
    EQUAL=6
    MOD=7
    LPAR=8
    RPAR=9
    LBRACE=10
    RBRACE=11
    LSQB=12
    RSQB=13
    COMMA=14
    COLON=15
    SEMI=16
    QUOTE=17
    OR=18
    AND=19
    COMMENT=20
    PRINT=21
    NOT=22
    IF=23
    ELSE=24
    ELIF=25
    FOR=26
    IN=27
    RANGE=28
    ENUMERATE=29
    WHILE=30
    SWITCH=31
    CASE=32
    BREAK=33
    CONTINUE=34
    RETURN=35
    DEF=36
    TRUE=37
    FALSE=38
    TRY=39
    EXCEPT=40
    FINALLY=41
    RAISE=42
    CONST=43
    IMPORT=44
    FROM=45
    LAMBDA=46
    NONE=47
    ECOMPLEMENT=48
    DECL=49
    TYPE=50
    ARROW=51
    AS=52
    BOOLEAN=53
    IDENTIFIER=54
    NUMBER=55
    STRING=56
    CONDITION_OP=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GrammarParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StmtContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StmtContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = GrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.stmt()
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 135689150641733890) != 0)):
                    break

            self.state = 91
            self.match(GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(GrammarParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(GrammarParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = GrammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 8, 21, 22, 39, 44, 49, 53, 54, 55, 56]:
                self.state = 93
                self.simple_stmt()
                pass
            elif token in [23, 24, 25, 26, 30, 36]:
                self.state = 94
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_stmt(self):
            return self.getTypedRuleContext(GrammarParser.Assignment_stmtContext,0)


        def import_stmt(self):
            return self.getTypedRuleContext(GrammarParser.Import_stmtContext,0)


        def try_stmt(self):
            return self.getTypedRuleContext(GrammarParser.Try_stmtContext,0)


        def declare_stmt(self):
            return self.getTypedRuleContext(GrammarParser.Declare_stmtContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(GrammarParser.Print_stmtContext,0)


        def multiple_assignment_stmt(self):
            return self.getTypedRuleContext(GrammarParser.Multiple_assignment_stmtContext,0)


        def function_call(self):
            return self.getTypedRuleContext(GrammarParser.Function_callContext,0)


        def exp(self):
            return self.getTypedRuleContext(GrammarParser.ExpContext,0)


        def COLON(self):
            return self.getToken(GrammarParser.COLON, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = GrammarParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.assignment_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.import_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.try_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.declare_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 101
                self.print_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 102
                self.multiple_assignment_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 103
                self.function_call()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 104
                self.exp()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 105
                self.exp()
                self.state = 106
                self.match(GrammarParser.COLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GrammarParser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(GrammarParser.EQUAL, 0)

        def exp(self):
            return self.getTypedRuleContext(GrammarParser.ExpContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_assignment_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment_stmt" ):
                listener.enterAssignment_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment_stmt" ):
                listener.exitAssignment_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment_stmt" ):
                return visitor.visitAssignment_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assignment_stmt(self):

        localctx = GrammarParser.Assignment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(GrammarParser.IDENTIFIER)
            self.state = 111
            self.match(GrammarParser.EQUAL)
            self.state = 112
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECL(self):
            return self.getToken(GrammarParser.DECL, 0)

        def single_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.Single_declarationContext)
            else:
                return self.getTypedRuleContext(GrammarParser.Single_declarationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.COMMA)
            else:
                return self.getToken(GrammarParser.COMMA, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_declare_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclare_stmt" ):
                listener.enterDeclare_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclare_stmt" ):
                listener.exitDeclare_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare_stmt" ):
                return visitor.visitDeclare_stmt(self)
            else:
                return visitor.visitChildren(self)




    def declare_stmt(self):

        localctx = GrammarParser.Declare_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declare_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(GrammarParser.DECL)
            self.state = 115
            self.single_declaration()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 116
                self.match(GrammarParser.COMMA)
                self.state = 117
                self.single_declaration()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GrammarParser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(GrammarParser.EQUAL, 0)

        def exp(self):
            return self.getTypedRuleContext(GrammarParser.ExpContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_single_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_declaration" ):
                listener.enterSingle_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_declaration" ):
                listener.exitSingle_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_declaration" ):
                return visitor.visitSingle_declaration(self)
            else:
                return visitor.visitChildren(self)




    def single_declaration(self):

        localctx = GrammarParser.Single_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_single_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(GrammarParser.IDENTIFIER)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 124
                self.match(GrammarParser.EQUAL)
                self.state = 125
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(GrammarParser.IMPORT, 0)

        def module_name(self):
            return self.getTypedRuleContext(GrammarParser.Module_nameContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_import_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_stmt" ):
                listener.enterImport_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_stmt" ):
                listener.exitImport_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_stmt" ):
                return visitor.visitImport_stmt(self)
            else:
                return visitor.visitChildren(self)




    def import_stmt(self):

        localctx = GrammarParser.Import_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_import_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(GrammarParser.IMPORT)
            self.state = 129
            self.module_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(GrammarParser.FROM, 0)

        def module_name(self):
            return self.getTypedRuleContext(GrammarParser.Module_nameContext,0)


        def IMPORT(self):
            return self.getToken(GrammarParser.IMPORT, 0)

        def import_list(self):
            return self.getTypedRuleContext(GrammarParser.Import_listContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_from_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_stmt" ):
                listener.enterFrom_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_stmt" ):
                listener.exitFrom_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_stmt" ):
                return visitor.visitFrom_stmt(self)
            else:
                return visitor.visitChildren(self)




    def from_stmt(self):

        localctx = GrammarParser.From_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_from_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(GrammarParser.FROM)
            self.state = 132
            self.module_name()
            self.state = 133
            self.match(GrammarParser.IMPORT)
            self.state = 134
            self.import_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.IDENTIFIER)
            else:
                return self.getToken(GrammarParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.COMMA)
            else:
                return self.getToken(GrammarParser.COMMA, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_module_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_name" ):
                listener.enterModule_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_name" ):
                listener.exitModule_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_name" ):
                return visitor.visitModule_name(self)
            else:
                return visitor.visitChildren(self)




    def module_name(self):

        localctx = GrammarParser.Module_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_module_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(GrammarParser.IDENTIFIER)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 137
                self.match(GrammarParser.COMMA)
                self.state = 138
                self.match(GrammarParser.IDENTIFIER)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.Import_nameContext)
            else:
                return self.getTypedRuleContext(GrammarParser.Import_nameContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.COLON)
            else:
                return self.getToken(GrammarParser.COLON, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_import_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_list" ):
                listener.enterImport_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_list" ):
                listener.exitImport_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_list" ):
                return visitor.visitImport_list(self)
            else:
                return visitor.visitChildren(self)




    def import_list(self):

        localctx = GrammarParser.Import_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_import_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.import_name()
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 145
                self.match(GrammarParser.COLON)
                self.state = 146
                self.import_name()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.IDENTIFIER)
            else:
                return self.getToken(GrammarParser.IDENTIFIER, i)

        def AS(self):
            return self.getToken(GrammarParser.AS, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_import_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_name" ):
                listener.enterImport_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_name" ):
                listener.exitImport_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_name" ):
                return visitor.visitImport_name(self)
            else:
                return visitor.visitChildren(self)




    def import_name(self):

        localctx = GrammarParser.Import_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_import_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(GrammarParser.IDENTIFIER)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==52:
                self.state = 153
                self.match(GrammarParser.AS)
                self.state = 154
                self.match(GrammarParser.IDENTIFIER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Try_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRY(self):
            return self.getToken(GrammarParser.TRY, 0)

        def COLON(self):
            return self.getToken(GrammarParser.COLON, 0)

        def stmt(self):
            return self.getTypedRuleContext(GrammarParser.StmtContext,0)


        def except_clause(self):
            return self.getTypedRuleContext(GrammarParser.Except_clauseContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_try_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTry_stmt" ):
                listener.enterTry_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTry_stmt" ):
                listener.exitTry_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTry_stmt" ):
                return visitor.visitTry_stmt(self)
            else:
                return visitor.visitChildren(self)




    def try_stmt(self):

        localctx = GrammarParser.Try_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_try_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(GrammarParser.TRY)
            self.state = 158
            self.match(GrammarParser.COLON)
            self.state = 159
            self.stmt()
            self.state = 160
            self.except_clause()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Except_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXCEPT(self):
            return self.getToken(GrammarParser.EXCEPT, 0)

        def IDENTIFIER(self):
            return self.getToken(GrammarParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(GrammarParser.COLON, 0)

        def stmt(self):
            return self.getTypedRuleContext(GrammarParser.StmtContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_except_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExcept_clause" ):
                listener.enterExcept_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExcept_clause" ):
                listener.exitExcept_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExcept_clause" ):
